--- a/templates/layout/html.html.twig
+++ b/templates/layout/html.html.twig
@@ -64,7 +64,7 @@
     <js-placeholder token="{{ placeholder_token|raw }}">
   </head>
   <body{{ attributes.addClass(body_classes) }}>
-    {{ kint(page) }}
+    {# {{ kint(page) }} #}
 
     {#
       Keyboard navigation/accessibility link to main content section in
