--- a/theme_components/sass/global-styles.scss
+++ b/theme_components/sass/global-styles.scss
@@ -32,11 +32,11 @@
 	@include foundation-menu-icon;
 	@include foundation-title-bar;
 	@include foundation-top-bar;
+	@include foundation-breadcrumbs;
 
 	// @include foundation-accordion;
 	// @include foundation-accordion-menu;
 	// @include foundation-badge;
-	// @include foundation-breadcrumbs;
 	// @include foundation-button-group;
 	// @include foundation-callout;
 	// @include foundation-card;
