--- a/theme_components/sass/global-styles.scss
+++ b/theme_components/sass/global-styles.scss
@@ -81,6 +81,7 @@
 @import 'layout/sidebar';
 @import 'layout/account-menu';
 @import 'layout/drupal-task-menu';
+@import 'layout/search-module';
 
 @import 'partials/generic-styles';
 @import 'partials/ie';
